cmake_minimum_required(VERSION 3.9)
project(Data_Structure_Programs_Using_C_)

set(CMAKE_CXX_STANDARD 17)


add_executable(Table_Of_A_Number Table_Of_A_Number.cpp)
add_executable(Finding_Prime_In_Array Finding_Prime_In_Array.cpp)
add_executable(Priniting_Table_1_to_15 Priniting_Table_1_to_15.cpp)
add_executable(Working_of_an_array Working_of_an_array.cpp)
add_executable(Binary_search_array Binary_search_array.cpp)
add_executable(Array_Merge Array_Merge.cpp)
add_executable(Bubble_Sort Bubble_Sort.cpp)
add_executable(Merging_without_pointers Merging_without_pointers.cpp)
add_executable(Selection_sort Selection_sort.cpp)
add_executable(Quick_sort_final Quick_sort_final.cpp)
add_executable(linked_list_1 "Assignment 2/linked_list_1.cpp")
add_executable(Double_linked_list "Assignment 2/Double_linked_list.cpp")
add_executable(Searching_in_linked_list_singly "Assignment 2/Searching_in_linked_list_singly.cpp")